syntax = "proto3";

package todo;


service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (array) {};
    rpc updateTodo(updaredTodoRequest) returns (CreateTodoResponse) {}
}

message array {
    repeated CreateTodoResponse responseinArray = 1; 
}



message updaredTodoRequest {
    int32 id = 1;
}

message CreateTodoRequest {
    string name = 1;
}

message CreateTodoResponse {
    Todo todo = 1;
}

message Todo {
    int32 id = 1;
    string name = 2;
}